# StudyBuddy

./: README.md  main.py  pyproject.toml  requirements.txt
cogs/: current.py  info.py  setup.py
helpers/: data.py  funcs.py
models/: classModels.py
